[package]
name = "min_timer"
version = "0.1.0"
authors = ["Cem Geçgel <gecgelcem@outlook.com>"]
edition = "2021"
description = "Simple f64 based duration and timer."
readme = "README.md"
repository = "https://github.com/Waistax/min_timer"
license = "MIT OR Apache-2.0"
keywords = ["timer"]
categories = ["game-development"]

[dependencies]
